--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_stoprel1		"Reihenfolge beachten: 'Stopp' muss vor 'Neu laden' sein!">
 <!ENTITY Ctr_panelmenucol	"Alternative Hintergrundfarbe für das 'Panel-Aufklappmenü'">
 <!ENTITY Ctr_hideprivmask	"Privater Modus: keine 'Masken-Symbole' auf Leisten anzeigen">
-<!ENTITY Ctr_nbisizedelay	"ms Ausführungsverzögerung (1000 ms = 1 Sekunde)">
+<!ENTITY Ctr_nbisizedelay	"ms - Ausführungsverzögerung beim Start (1000 ms = 1 Sekunde)">
 <!ENTITY Ctr_findbar		"Position der Suchleiste">
 <!ENTITY Ctr_findbar_def	"Unten (Standard)">
 <!ENTITY Ctr_findbar_top	"Oben">
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Kompakte 'Panel-Aufklappmenüs' (Lesezeichen, Chronik etc.)">
 <!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: verstecke Schaltfläche 'Normalgröße'">
 <!ENTITY Ctr_alt_newtabp	"Seite 'Neuer Tab' (about:newtab): alternative Darstellung">
+<!ENTITY Ctr_ctroldsearch	"Alte 'Suche' (experimentell)">
 <!ENTITY Ctr_addonmanager	"Add-on Manager">
 <!ENTITY Ctr_alt_addonsp	"'Mehr Info'-Seite: alternative Anordnung">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
 <!ENTITY Ctr_am_nowarning	"Add-on 'Übersicht': Warnungen ausblenden">
 <!ENTITY Ctr_am_compact		"Add-on 'Übersicht': Kompakte Darstellung">
+<!ENTITY Ctr_am_compact2	"Kompakte Darstellung +">
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on Installationsfenster (about:config Einstellung)">
 <!ENTITY Ctr_bmbutpanelm	"Lesezeichen-Menüschaltfläche: 'Panel-Aufklappmenü'-Darstellung">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Verstecke Standardschaltflächen 'Minimieren / Maximieren / Schließen'">
 <!ENTITY Ctr_hidenavbar		"Leiste verstecken">
 <!ENTITY Ctr_navbarpad		"Zusätzliche Abstände links und rechts">
-<!ENTITY Ctr_navbarpad_l	"Links: ">
-<!ENTITY Ctr_navbarpad_r	"Rechts: ">
+<!ENTITY Ctr_navbarpad_l	"Links:">
+<!ENTITY Ctr_navbarpad_r	"Rechts:">
 <!ENTITY Ctr_nobookbarbg	"Hintergrundfarbe entfernen">
 <!ENTITY Ctr_bookbarfs		"Im 'Vollbild'-Modus">
 <!ENTITY Ctr_nonavbarbg		"Hintergrundfarbe entfernen">
