--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Menús tipo panel (botones de Historial, triple barra, etc.): Vista compacta">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña (about:newtab): Apariencia alternativa">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información' de los complementos: Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en la lista de complementos">
-<!ENTITY Ctr_am_compact		"Add-on lists: compact view">
+<!ENTITY Ctr_am_compact		"Listas de complementos: Vista compacta">
+<!ENTITY Ctr_am_compact2	"Vista compacta +">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo cuadro de instalación de complementos (... >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores (≠ barra lateral): Estilo de panel de menú">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Ocultar botones Min/Max/Cerrar predeterminados del SO">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra">
 <!ENTITY Ctr_navbarpad		"Ahuecado adicional a izquierda y derecha">
-<!ENTITY Ctr_navbarpad_l	"Izquierda: ">
-<!ENTITY Ctr_navbarpad_r	"Derecha: ">
+<!ENTITY Ctr_navbarpad_l	"Izquierda:">
+<!ENTITY Ctr_navbarpad_r	"Derecha:">
 <!ENTITY Ctr_nobookbarbg	"Eliminar color de fondo">
 <!ENTITY Ctr_bookbarfs		"En modo pantalla completa">
 <!ENTITY Ctr_nonavbarbg		"Eliminar color de fondo">
