--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Paneelimenüüd: kompaktne vaade (järjehoidjad, ajalugu jms.)">
 <!ENTITY Ctr_hidezoomres	"Suurendamise juhtnupud tööriistaribal: peida suurendamise lähtestamise nupp">
 <!ENTITY Ctr_alt_newtabp	"Uue kaardi leht (about:newtab): alternatiivne välimus">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"Lisade 'rohkem teavet' leht: alternatiivne järjestus">
 <!ENTITY Ctr_alt_addonsm	"Lisade haldur: alternatiivne välimus">
 <!ENTITY Ctr_am_nowarning	"Lisade halduri laienduste loend: peida hoiatused">
 <!ENTITY Ctr_am_compact		"Lisade loend: kompaktne vaade">
+<!ENTITY Ctr_am_compact2	"Kompaktne vaade +">
 <!ENTITY Ctr_addonversion	"Lisade halduri laienduste loend: näita lisade versiooni">
 <!ENTITY Ctr_xpinstallui	"Lisade haldur: vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutpanelm	"Järjehoidjate menüü nupp: paneelimenüü välimus">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Peida vaikimisi op-süsteemi min/max/sulge nupud">
 <!ENTITY Ctr_hidenavbar		"Aadressiriba: peida tööriistariba">
 <!ENTITY Ctr_navbarpad		"Lisatühimik vasakul ja paremal">
-<!ENTITY Ctr_navbarpad_l	"Vasakul: ">
-<!ENTITY Ctr_navbarpad_r	"Paremal: ">
+<!ENTITY Ctr_navbarpad_l	"Vasakul:">
+<!ENTITY Ctr_navbarpad_r	"Paremal:">
 <!ENTITY Ctr_nobookbarbg	"Järjehoidjate riba: eemalda taustavärv">
 <!ENTITY Ctr_bookbarfs		"Järjehoidjate riba: täisekraani režiimis">
 <!ENTITY Ctr_nonavbarbg		"Aadressiriba: eemalda taustavärv">
