--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Menu panelu: widok kompaktowy (zakładki, historia itp.)">
 <!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: ukryj przycisk resetu powiększenia">
 <!ENTITY Ctr_alt_newtabp	"Strona nowej karty (about:newtab): alternatywny wygląd">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"Menedżer dodatków">
 <!ENTITY Ctr_alt_addonsp	"Strona dodatków 'więcej informacji': alternatywny wygląd">
 <!ENTITY Ctr_alt_addonsm	"Menedżer dodatków: alternatywny wygląd">
 <!ENTITY Ctr_am_nowarning	"Listy dodatków: ukryj ostrzeżenia">
 <!ENTITY Ctr_am_compact		"Listy dodatków: widok kompaktowy">
+<!ENTITY Ctr_am_compact2	"Widok kompaktowy +">
 <!ENTITY Ctr_addonversion	"Listy dodatków: wyświetl wersję dodatku">
 <!ENTITY Ctr_xpinstallui	"Stare okno instalacji dodatku (ustawienie about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: wygląd menu panelu">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Ukryj domyślne przyciski systemowe: minimalizuj, maksymalizuj, zamknij">
 <!ENTITY Ctr_hidenavbar		"Pasek nawigacji: ukryj pasek narzędzi">
 <!ENTITY Ctr_navbarpad		"Dodatkowe wypełnienie lewe i prawe">
-<!ENTITY Ctr_navbarpad_l	"Lewe: ">
-<!ENTITY Ctr_navbarpad_r	"Prawe: ">
+<!ENTITY Ctr_navbarpad_l	"Lewe:">
+<!ENTITY Ctr_navbarpad_r	"Prawe:">
 <!ENTITY Ctr_nobookbarbg	"Pasek zakładek: usuń kolor tła">
 <!ENTITY Ctr_bookbarfs		"Pasek zakładek: w trybie pełnoekranowym">
 <!ENTITY Ctr_nonavbarbg		"Pasek nawigacji: usuń kolor tła">
