--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"面板菜单: 更紧凑的视图 (书签、历史等等)">
 <!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
 <!ENTITY Ctr_alt_newtabp	"新标签页页面 (about:newtab): 备选的外观">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"附加组件管理器">
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
 <!ENTITY Ctr_am_nowarning	"附加组件管理器列表: 隐藏警告">
 <!ENTITY Ctr_am_compact		"附加组件列表: 紧凑视图">
+<!ENTITY Ctr_am_compact2	"紧凑视图 +">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
 <!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"隐藏系统默认的 最小化/最大化/关闭 按钮">
 <!ENTITY Ctr_hidenavbar		"导航工具栏: 隐藏工具栏">
 <!ENTITY Ctr_navbarpad		"额外的左右内边距">
-<!ENTITY Ctr_navbarpad_l	"左: ">
-<!ENTITY Ctr_navbarpad_r	"右: ">
+<!ENTITY Ctr_navbarpad_l	"左:">
+<!ENTITY Ctr_navbarpad_r	"右:">
 <!ENTITY Ctr_nobookbarbg	"书签工具栏: 移除背景颜色">
 <!ENTITY Ctr_bookbarfs		"书签工具栏: 在全屏模式">
 <!ENTITY Ctr_nonavbarbg		"导航工具栏: 移除背景颜色">
