--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Nabídky panelů: kompaktní zobrazení (záložky, historie atd.)">
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_alt_newtabp	"Nový panel (about:newtab): alternativní vzhled">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"Správce rozšíření">
 <!ENTITY Ctr_alt_addonsp	"Stránka rozšíření lišty 'další info': alternativní vzhled">
 <!ENTITY Ctr_alt_addonsm	"Správce rozšíření: alternativní vzhled">
 <!ENTITY Ctr_am_nowarning	"Seznam Správce rozšíření: skrývat varování">
 <!ENTITY Ctr_am_compact		"Správce doplňků: kompaktní vzhled">
+<!ENTITY Ctr_am_compact2	"Kompaktní vzhled +">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Tlačítko menu záložek: panel menu vzhledu">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Skrýt defaultní OS tlačítka min/max/close">
 <!ENTITY Ctr_hidenavbar		"Navigační lišta: skrýt lištu">
 <!ENTITY Ctr_navbarpad		"Přidat místo po stranách">
-<!ENTITY Ctr_navbarpad_l	"Vlevo: ">
-<!ENTITY Ctr_navbarpad_r	"Vpravo: ">
+<!ENTITY Ctr_navbarpad_l	"Vlevo:">
+<!ENTITY Ctr_navbarpad_r	"Vpravo:">
 <!ENTITY Ctr_nobookbarbg	"Lišta záložek: odstranit barvu pozadí">
 <!ENTITY Ctr_bookbarfs		"Lišta záložek: v celoobrazovkovém módu (fullscreen)">
 <!ENTITY Ctr_nonavbarbg		"Navigační lišta: odstranit barvu pozadí">
