--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Menijowe wuskakowace wokna (čitasske znamjenja, historija atd.): kompaktny napohlad">
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
 <!ENTITY Ctr_alt_newtabp	"Strona noweho rajtarka (about:newtab): alternatiwny napohlad">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': alternatiwny porjad">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny napohlad">
 <!ENTITY Ctr_am_nowarning	"Lisćiny přidatkow: Warnowanja schować">
 <!ENTITY Ctr_am_compact		"Add-on lists: compact view">
+<!ENTITY Ctr_am_compact2	"Compact view +">
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
 <!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Tłóčatko menija zapołožkow: napohlad wuskakowaceho menija">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Standardne tłóčatka Miniměrować/Maksiměrować/Začinić schować">
 <!ENTITY Ctr_hidenavbar		"Symbolowu lajstu schować">
 <!ENTITY Ctr_navbarpad		"Additional left and right padding">
-<!ENTITY Ctr_navbarpad_l	"Left: ">
-<!ENTITY Ctr_navbarpad_r	"Right: ">
+<!ENTITY Ctr_navbarpad_l	"Left:">
+<!ENTITY Ctr_navbarpad_r	"Right:">
 <!ENTITY Ctr_nobookbarbg	"Pozadkowu barbu wotstronić">
 <!ENTITY Ctr_bookbarfs		"W modusu połneje wobrazowki">
 <!ENTITY Ctr_nonavbarbg		"Pozadkowu barbu wotstronić">
