--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -141,11 +141,13 @@
 <!ENTITY Ctr_cpanelmenus	"Menus do Painel Compacto (Favoritos, Histórico, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de Ampliação na Barra de Ferramentas: Ocultar o Botão Redefinir Ampliação">
 <!ENTITY Ctr_alt_newtabp	"Página Nova Aba (about:newtab): Aparência Alternativa">
+<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
 <!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"'More info' page: alternative order">
 <!ENTITY Ctr_alt_addonsm	"Alternative appearance">
 <!ENTITY Ctr_am_nowarning	"Add-on lists: hide warnings">
 <!ENTITY Ctr_am_compact		"Add-on lists: compact view">
+<!ENTITY Ctr_am_compact2	"Compact view +">
 <!ENTITY Ctr_addonversion	"Add-on lists: show add-on version">
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
@@ -249,8 +251,8 @@
 <!ENTITY Ctr_transptcw10	"Hide default OS min/max/close buttons">
 <!ENTITY Ctr_hidenavbar		"Ocultar a Barra de Navegação">
 <!ENTITY Ctr_navbarpad		"Additional left and right padding">
-<!ENTITY Ctr_navbarpad_l	"Left: ">
-<!ENTITY Ctr_navbarpad_r	"Right: ">
+<!ENTITY Ctr_navbarpad_l	"Left:">
+<!ENTITY Ctr_navbarpad_r	"Right:">
 <!ENTITY Ctr_nobookbarbg	"Barra de Favoritos: Remover a Cor do Fundo">
 <!ENTITY Ctr_bookbarfs		"Barra de Favoritos: No Modo de Tela Cheia">
 <!ENTITY Ctr_nonavbarbg		"Barra de Navegação: Remover a Cor do Fundo">
