--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -99,7 +99,7 @@
 <!ENTITY Ctr_appbautocol	"Määra vaikimisi / Aurora / Nightly värvid automaatselt">
 <!ENTITY Ctr_appbutbdl		"Peida piirjooned ja taustavärvid">
 <!ENTITY Ctr_dblclclosefx	"Topeltklõps sulgeb praeguse akna">
-<!ENTITY Ctr_appbclmmenus	"Klõsatavad menüünupu-sisesed menüüd (Uus kaart, Prindi...)">
+<!ENTITY Ctr_appbclmmenus	"Klõpsatavad menüünupu-sisesed menüüd (Uus kaart, Prindi...)">
 <!ENTITY Ctr_appbutonclab	"Rakenduse menüünupu nimi">
 <!ENTITY Ctr_appbutonclab2	"Lisa nimi või jäta tühjaks">
 
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_stoprel1		"Tähtis: paiguta uuestilaadimise nupp peatamise nupu järele!">
 <!ENTITY Ctr_panelmenucol	"Paneelimenüüd: alternatiivne taustavärv">
 <!ENTITY Ctr_hideprivmask	"Privaatne veebilehitsemine: peida maski kujutis">
-<!ENTITY Ctr_nbisizedelay	"millisekundiline viivitus täitmisel (1000 ms = 1 sek)">
+<!ENTITY Ctr_nbisizedelay	"ms - täitmise viivitus brauseri käivitumisel (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Otsinguriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
 <!ENTITY Ctr_findbar_top	"Üleval">
@@ -141,7 +141,7 @@
 <!ENTITY Ctr_cpanelmenus	"Paneelimenüüd: kompaktne vaade (järjehoidjad, ajalugu jms.)">
 <!ENTITY Ctr_hidezoomres	"Suurendamise juhtnupud tööriistaribal: peida suurendamise lähtestamise nupp">
 <!ENTITY Ctr_alt_newtabp	"Uue kaardi leht (about:newtab): alternatiivne välimus">
-<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
+<!ENTITY Ctr_ctroldsearch	"Vana otsing (katsejärgus)">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"Lisade 'rohkem teavet' leht: alternatiivne järjestus">
 <!ENTITY Ctr_alt_addonsm	"Lisade haldur: alternatiivne välimus">
