--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Důležité: umístěte tlačítko Obnovit za tlačítko Zastavit!">
 <!ENTITY Ctr_panelmenucol	"Nabídky panelů: alternativní barva pozadí">
 <!ENTITY Ctr_hideprivmask	"Anonymní prohlížení: skrýt indikátor s maskou">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ms prodlevy před spuštěním (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Lišta vyhledávání">
 <!ENTITY Ctr_findbar_def	"Výchozí umístění">
