--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Reihenfolge beachten: 'Stopp' muss vor 'Neu laden' sein!">
 <!ENTITY Ctr_panelmenucol	"Alternative Hintergrundfarbe für das 'Panel-Aufklappmenü'">
 <!ENTITY Ctr_hideprivmask	"Privater Modus: keine 'Masken-Symbole' auf Leisten anzeigen">
+<!ENTITY Ctr_navsmallicons	"Kleine Symbole">
+<!ENTITY Ctr_navlargeicons	"Große Symbole">
 <!ENTITY Ctr_nbisizedelay	"ms - Ausführungsverzögerung beim Start (1000 ms = 1 Sekunde)">
 <!ENTITY Ctr_findbar		"Position der Suchleiste">
 <!ENTITY Ctr_findbar_def	"Unten (Standard)">
