--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Wažny: Tłocašk Znowego za tłocaškom Stoj placěrowaś!">
 <!ENTITY Ctr_panelmenucol	"Pólowe menije: alternatiwna slězynowa barwa">
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowaŕ schowaś">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"Wuwjeźeńske wokomuźenje ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytańska rědka">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
