--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Σημαντικό: τοποθετήστε το κουμπί «Ανανέωση» μετά από το κουμπί «Διακοπή»!">
 <!ENTITY Ctr_panelmenucol	"Αναδυόμενα μενού πίνακα: εναλλακτικό χρώμα φόντου">
 <!ENTITY Ctr_hideprivmask	"Ιδιωτική περιήγηση: απόκρυψη ενδείκτη-μάσκα">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ms καθυστέρηση εφαρμογής (1000 ms = 1 δευτερόλεπτο)">
 <!ENTITY Ctr_findbar		"Θέση γραμμής εύρεσης">
 <!ENTITY Ctr_findbar_def	"Κάτω μέρος (προεπιλογή)">
