--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Important: position reload button after stop button!">
 <!ENTITY Ctr_panelmenucol	"Panel menu popups: alternative background color">
 <!ENTITY Ctr_hideprivmask	"Private browsing: hide mask indicator">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ms - initialization delay on browser startup (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Findbar position">
 <!ENTITY Ctr_findbar_def	"Bottom (default)">
