--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Importante: ¡Sitúe el botón Recargar después del botón Parar!">
 <!ENTITY Ctr_panelmenucol	"Menús tipo panel: Color de fondo alternativo">
 <!ENTITY Ctr_hideprivmask	"Navegación privada: Ocultar indicador de máscara">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ms de retardo en la ejecución (1000 ms = 1 seg)">
 <!ENTITY Ctr_findbar		"Posición de la barra de búsqueda en la ventana">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
