--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Tähtis: paiguta uuestilaadimise nupp peatamise nupu järele!">
 <!ENTITY Ctr_panelmenucol	"Paneelimenüüd: alternatiivne taustavärv">
 <!ENTITY Ctr_hideprivmask	"Privaatne veebilehitsemine: peida maski kujutis">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ms - täitmise viivitus brauseri käivitumisel (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Otsinguriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
