--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Wažny: Tłóčatko Znowa za tłóčatkom Stój zaměstnić!">
 <!ENTITY Ctr_panelmenucol	"Menijowe wuskakowace wokna: alternatiwna pozadkowa barba">
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowar schować">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"Komdźenje wuwjedźenja w ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytanska lajsta">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
