--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Importante: disporre il pulsante Ricarica a destra del pulsante Stop!">
 <!ENTITY Ctr_panelmenucol	"Colore di sfondo alternativo per i menu">
 <!ENTITY Ctr_hideprivmask	"Nascondi indicatore modalità di Navigazione anonima">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ritardo esecuzione in ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Barra di ricerca nel testo">
 <!ENTITY Ctr_findbar_def	"Posizione predefinita">
