--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Pomembno: gumb Ponovno naloži vstavite za gumb Ustavi!">
 <!ENTITY Ctr_panelmenucol	"Ploščasti meniji: nadomestna barva ozadja">
 <!ENTITY Ctr_hideprivmask	"Zasebno brskanje: skrij kazalnik maskiranja">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"Zakasnitev izvajanja v ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Položaj iskalne vrstice">
 <!ENTITY Ctr_findbar_def	"Spodaj (privzeto)">
