--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -126,7 +126,9 @@
 <!ENTITY Ctr_stoprel1		"Önemli: yenile butonunu dur butonundan sonra yerleştir!">
 <!ENTITY Ctr_panelmenucol	"Panel menu: alternatif arka plan rengi">
 <!ENTITY Ctr_hideprivmask	"Gizli gezinme: maske göstergesini gizle">
-<!ENTITY Ctr_nbisizedelay	"ms delay in execution (1000 ms = 1 sec)">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
+<!ENTITY Ctr_nbisizedelay	"ms - initialization delay on browser startup (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Arama çubuğu">
 <!ENTITY Ctr_findbar_def	"Arama çubuğu (varsayılan pozisyon)">
 <!ENTITY Ctr_findbar_top	"Üst">
