--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Важливо: з’являється кнопка «Перезавантаження» на місці кнопки «Зупинити»!">
 <!ENTITY Ctr_panelmenucol	"Панель меню: альтернативний колір тла">
 <!ENTITY Ctr_hideprivmask	"Приватний огляд: приховати індикатор маски">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"мс затримка виконання (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель пошуку">
 <!ENTITY Ctr_findbar_def	"Типова позиція">
