--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"Vigtigt: placer genindlæs efter stop!">
 <!ENTITY Ctr_panelmenucol	"Panelmenuer: alternativ baggrundsfarve">
 <!ENTITY Ctr_hideprivmask	"Privat browsing: skjul maskeindikator">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"ms forsinkelse (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Placering af søgelinje">
 <!ENTITY Ctr_findbar_def	"Bunden (standard)">
