--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -126,6 +126,8 @@
 <!ENTITY Ctr_stoprel1		"重要: 将重新载入按钮放在停止按钮后面!">
 <!ENTITY Ctr_panelmenucol	"面板菜单: 备选的背景颜色">
 <!ENTITY Ctr_hideprivmask	"隐私浏览: 隐藏面具标志">
+<!ENTITY Ctr_navsmallicons	"Small icons">
+<!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay	"执行时延迟的毫秒数 (1000 毫秒 = 1 秒)">
 <!ENTITY Ctr_findbar		"查找栏位置">
 <!ENTITY Ctr_findbar_def	"底部(默认)">
